--- a/index.html
+++ b/index.html
@@ -1,77 +1,42 @@
- <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-                <html>
-                <head>
-                    <title>Example Code for Informz Tracking</title>
-                    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-                    <script type="text/javascript">
-                        // Initialize tracking and track the pageview
-                        //-------------------------------------------------------
-                        var z_account = "22B85AD8-C455-4690-8A91-EDD056466663";
-                        var z_collector = "devtg.invention.informz.com";
-                        var z_cookieDomain = ".amplifyapp.com";
-                        //-------------------------------------------------------
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stephanie's Webtracking Site</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file for styling -->
+</head>
+<body>
+    <header>
+        <h1>Welcome to Stephanie's Webtracking site</h1>
+        <nav>
+            <h2>Instructions</h2>
+            <p>To host a site of your own, you must do the following:</p>
+            <ol>
+                <li>Fork this repo</li>
+                <li>Go to forked repo and click add file</li>
+                <li>Name file [brandid].html</li>
+                <li>Edit file and paste in the webtracking sample page code found in the View Instructions button for your brand under Settings-> Webtracking</li>
+                <li>Do a find and replace for 'openInformzAlertDialog' and replace with 'alert'</li>
+                <li>Commit changes</li>
+                <li>Edit the index.html page (this page) and create a link under Pages to your new site</li>
+                <li>Commit changes</li>
+                <li>Create a Pull Request from your forked branch to the main branch and let Jesiah know</li>
+            </ol>
+            <p>Note:</p>
+            <p>For Dev2 you must host the web_trk/sp.js file manually. I have hosted it on this site. Rc will point to cdn.informzrc.net to grab that file instead. We can either change the sample code to point to the informzrc.net cdn or paste the same code as is and it will point to the web_trk file hosted here. Keep in mind when changes are made to this file we will need to manually update it.  </p>
+        </nav>
+    </header>
 
-                        (function (e, o, n, r, t, a, s) { e[t] || (e.GlobalSnowplowNamespace = e.GlobalSnowplowNamespace || [], e.GlobalSnowplowNamespace.push(t), e[t] = function () { (e[t].q = e[t].q || []).push(arguments) }, e[t].q = e[t].q || [], a = o.createElement(n), s = o.getElementsByTagName(n)[0], a.async = 1, a.src = r, s.parentNode.insertBefore(a, s)) }(window, document, "script", "https:/web_trk/sp.js", "informz_trk")), informz_trk("newTracker", "infz", z_collector + "/web_trk/collector/", { appId: z_account, cookieDomain: z_cookieDomain }), informz_trk("setUserIdFromLocation", "_zs"), informz_trk("enableActivityTracking", 30, 15); informz_trk("trackPageView", null);
+    <section id="pages">
+        <h2>Pages</h2>
+        <ul>
+            <li><a href="webtracking43072.html">Webtracking brand 43072</a></li>
+        </ul>
+    </section>
 
-                    </script>
-                    <!-- Example events -->
-                    <script type="text/javascript">
-                        function WhitepaperDownloaded() {
-                            alert("A whitepaper is being downloaded.");
-                            informz_trk('trackStructEvent',
-                                'Download Whitepaper',         // Category (Required)
-                                'Benefits_of_Membership.pdf',  // Item (Required)
-                                'Used top link'                // Value (Optional), In this case the location of the link
-                            );
-                        }
-                        function VideoWatched() {
-                            alert("A video is being watched.");
-                            informz_trk('trackStructEvent',
-                                'Start Video',                 // Category (Required)
-                                'Annual_Meeting_In_Review.avi' // Item (Required)
-                            );
-                        }
-                        function WebsiteSearch() {
-                            alert("A search is made.");
-                            informz_trk('trackStructEvent',
-                                'Website',                      // Category (Required)
-                                'Search',                       // Item (Required)
-                                'How do I become a member'      // Value (Optional), in this case the search string
-                            );
-                        }
-                        function PurchaseProduct() {
-                            alert("A purchase was made.");
-                            informz_trk('addItem',
-                                '12345',          // Order ID (Required)
-                                'A01',            // SKU or Code (Required)
-                                'Hat',            // Product Name (Required)
-                                'Blue',           // Category (Required)
-                                '16.99',          // Unit Price (Required)
-                                '1'               // Quantity (Required)
-                            );
-                            informz_trk('addItem',
-                                '67890',          // Order ID (Required)
-                                'Z99',            // SKU or Code (Required)
-                                'T-Shirt',        // Product Name (Required)
-                                'Green Medium',   // Category (Required)
-                                '11.99',          // Unit Price (Required)
-                                '1'               // Quantity (Required)
-                            );
-
-                            informz_trk('trackTrans'); //submits transaction to Informz, place after last purchase on page
-                        }
-                    </script>
-                </head>
-
-                <body style="font-family:Arial">
-                    <h1>Informz Tracking Sample Page</h1>
-                    <h2>This shows how to use page tracking, interaction tracking and online purchase tracking.</h2>
-                    <p>
-                        Press the buttons below to trigger individual interactions:<br>
-                        <button type="button" onclick="WhitepaperDownloaded()">Downloaded Whitepaper</button>  
-                        <button type="button" onclick="VideoWatched()">Watch a video</button>  
-                        <button type="button" onclick="WebsiteSearch()">Search the website</button>  
-                        <button type="button" onclick="PurchaseProduct()">Purchase a product</button><br>
-                    </p>
-                </body>
-            </html>
+    <footer>
+        <p>&copy; 2023 Your Cute Website</p>
+    </footer>
+</body>
+</html>
